# deneb-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.specs/: get-it-done.md  might-it-be.md  project-info.md
.specs/deneb-viz/: design.md  requirements.md  session-2026-04-30.md  summary.md  tasks.md
.specs/more-chart-types/: design.md  requirements.md  session-2026-05-07.md  session.md  summary.md  tasks.md
.specs/theme-alignment/: design.md  requirements.md  summary.md  tasks.md
.specs/wasm-arrow-parquet/: design.md  requirements.md  session-2026-05-01.md  summary.md  tasks.md
crates/deneb-component/: Cargo.toml  README.md
crates/deneb-component/examples/: chart_spec_demo.rs  line_chart_demo.rs
crates/deneb-component/src/: error.rs  lib.rs
crates/deneb-component/src/chart/: area.rs  bar.rs  box_plot.rs  candlestick.rs  chord.rs  contour_chart.rs  heatmap.rs  histogram.rs  line.rs  mod.rs  pie.rs  radar.rs  sankey.rs  scatter.rs  shared.rs  strip.rs  waterfall.rs
crates/deneb-component/src/layout/: mod.rs
crates/deneb-component/src/spec/: mod.rs
crates/deneb-component/src/theme/: mod.rs
crates/deneb-core/: Cargo.toml
crates/deneb-core/examples/: basic_usage.rs
crates/deneb-core/src/: error.rs  lib.rs
crates/deneb-core/src/algorithm/: beeswarm.rs  chord_layout.rs  contour.rs  downsample.rs  kde.rs  mod.rs  sankey_layout.rs
crates/deneb-core/src/data/: mod.rs
crates/deneb-core/src/instruction/: mod.rs
crates/deneb-core/src/interaction/: lookup.rs  mod.rs
crates/deneb-core/src/layer/: mod.rs
crates/deneb-core/src/parser/: arrow.rs  csv.rs  json.rs  mod.rs  parquet.rs
crates/deneb-core/src/scale/: mod.rs
crates/deneb-core/src/style/: mod.rs
crates/deneb-demo/: Cargo.toml
crates/deneb-demo/src/: lib.rs  sample_data.rs  wasm_host.rs  window.rs
crates/deneb-demo/src/renderer/: color.rs  mod.rs  text.rs
crates/deneb-demo/tests/: wasm_arrow_parquet.rs
crates/deneb-wit/: Cargo.toml
crates/deneb-wit-wasm/: Cargo.toml
crates/deneb-wit-wasm/src/: lib.rs
crates/deneb-wit/examples/: wit_usage.rs
crates/deneb-wit/src/: lib.rs  main.rs
crates/deneb-wit/tests/: wit_integration_test.rs
crates/deneb-wit/wit/: world.wit
docs/: architecture.md  area-chart.md  bar-chart.md  box-plot.md  candlestick.md  chord.md  contour.md  demo.md  docs.json  heatmap.md  histogram.md  introduction.md  line-chart.md  pie-chart.md  radar.md  sankey.md  scatter-chart.md  strip-chart.md  waterfall.md  webassembly.md
