[package]
name = "deneb-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "demo-line"
path = "src/bin/demo_line.rs"

[[bin]]
name = "demo-bar"
path = "src/bin/demo_bar.rs"

[[bin]]
name = "demo-scatter"
path = "src/bin/demo_scatter.rs"

[[bin]]
name = "demo-area"
path = "src/bin/demo_area.rs"

[[bin]]
name = "demo-pie"
path = "src/bin/demo_pie.rs"

[[bin]]
name = "demo-histogram"
path = "src/bin/demo_histogram.rs"

[[bin]]
name = "demo-boxplot"
path = "src/bin/demo_boxplot.rs"

[[bin]]
name = "demo-waterfall"
path = "src/bin/demo_waterfall.rs"

[[bin]]
name = "demo-candlestick"
path = "src/bin/demo_candlestick.rs"

[[bin]]
name = "demo-radar"
path = "src/bin/demo_radar.rs"

[[bin]]
name = "demo-heatmap"
path = "src/bin/demo_heatmap.rs"

[[bin]]
name = "demo-strip"
path = "src/bin/demo_strip.rs"

[[bin]]
name = "demo-sankey"
path = "src/bin/demo_sankey.rs"

[[bin]]
name = "demo-chord"
path = "src/bin/demo_chord.rs"

[[bin]]
name = "demo-contour"
path = "src/bin/demo_contour.rs"

[dependencies]
deneb-core = { path = "../deneb-core", features = ["csv", "json", "arrow-format", "parquet-format"] }
deneb-component = { path = "../deneb-component" }
deneb-wit = { path = "../deneb-wit", default-features = false, features = ["csv", "json", "arrow-format", "parquet-format"] }

tiny-skia = "0.12"
ab_glyph = "0.2"
softbuffer = "0.4"
raw-window-handle = "0.6"

wasmtime = "44"
wasmtime-wasi = "44"

arrow = { version = "54", default-features = false, features = ["ipc"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.30"
